[project]
name = "node-engine"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "nicegui==1.4.12",
    "openai==1.9.0",
    "print-color==0.4.6",
    "rich==13.7.0",
    "sse-starlette==1.8.2",
    "sseclient==0.0.27",
]

[project.optional-dependencies]
test = ["pytest~=8.0.1"]

[project.scripts]
node-engine-service = "node_engine.start:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[tool.pyright]
include = ["node_engine", "examples"]

[tool.setuptools.packages.find]
include = ["node_engine", "node_engine.*"]
exclude = ["node_engine.tests*", "node_engine.*.tests*"]
namespaces = false                                       # to disable scanning PEP 420 namespaces (true by default)
